# db-copy-mysql

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  README.md  db_copy.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/db_copy_mysql/: __init__.py  __main__.py  db_copy.py  py.typed
tests/: test_db_copy.py
