[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-copy-mysql"
version = "1.0.0"
description = "MySQL Database Copy Tool - Copy databases using SSH tunnels and mysqldump (No external dependencies)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Harish Karumuthil", email = "harish2704@gmail.com"}
]
maintainers = [
    {name = "Harish Karumuthil", email = "harish2704@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities"
]
requires-python = ">=3.6"
keywords = ["mysql", "database", "copy", "backup", "ssh", "cli", "migration"]

[project.urls]
Homepage = "https://github.com/harish2704/db-copy-mysql"
Repository = "https://github.com/harish2704/db-copy-mysql"
Issues = "https://github.com/harish2704/db-copy-mysql/issues"

[project.scripts]
db-copy-mysql = "db_copy_mysql.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
db_copy_mysql = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
]